feat: updates create channel endpoint docs
